--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,py34,pypy
+envlist = py27,py33,py34,pypy,docs
 [testenv]
 changedir = tests
 deps =
@@ -8,3 +8,12 @@ deps =
     pytest-pep8
 commands =
     py.test
+[testenv:docs]
+basepython = python3.4
+changedir = docs
+deps =
+    --requirement=docs/requirements.txt
+whitelist_externals =
+    make
+commands =
+    make html
