--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-files = setup.py openvpn_status/__init__.py tests/test_package_meta.py
+files = setup.py docs/conf.py openvpn_status/__init__.py tests/test_package_meta.py
 commit = True
 tag = True
 current_version = 0.1.0.dev0
