--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - "pip install -U pip setuptools"
   - "pip install pytest pytest-cov pytest-pep8 coveralls"
   - "pip install ."
-script: "py.test"
+script: "cd tests && py.test"
 after_success: "coveralls"
 branches:
   only:
