We are compatible with CPython 3.5

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,py34,pypy,docs
+envlist = py27,py33,py34,py35,pypy,docs
 [testenv]
 changedir = tests
 deps =
@@ -9,7 +9,7 @@ deps =
 commands =
     py.test
 [testenv:docs]
-basepython = python3.4
+basepython = python3.5
 changedir = docs
 deps =
     --requirement=docs/requirements.txt
