Update setup.cfg and also
* Use `tool:pytest` section of new version of pytest
* Enable branch coverage
* Add Python 3.6 to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py27,py33,py34,py35,pypy,docs
+envlist = py27,py33,py34,py35,py36,pypy,docs
+
 [testenv]
 changedir = tests
 deps =
@@ -8,8 +9,10 @@ deps =
     pytest-pep8
 commands =
     py.test
+    coverage html
+
 [testenv:docs]
-basepython = python3.5
+basepython = python3.6
 changedir = docs
 deps =
     --requirement=docs/requirements.txt
