--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
-[pytest]
+[bdist_wheel]
+universal = 1
+
+[tool:pytest]
 addopts = --pep8 --cov openvpn_status
 pep8ignore =
     docs/conf.py ALL
-[bdist_wheel]
-universal = 1
