--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27,py33,py34,py35,py36,pypy,docs
 [testenv]
 changedir = tests
 deps =
-    pytest
+    pytest>=3.6
     pytest-cov
     pytest-pep8
 commands =
