Announce the compliance with Python 3.7

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,6 @@
 universal = 1
 
 [tool:pytest]
-addopts = --pep8 --cov openvpn_status
+addopts = --flake8 --cov openvpn_status
 pep8ignore =
     docs/conf.py ALL
