--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ changedir = tests
 deps =
     pytest>=3.6
     pytest-cov
-    pytest-pep8
+    pytest-flake8
 commands =
     py.test
     coverage html
