Replace Travis CI with GitHub Actions

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,37 @@
 universal = 1
 
 [tool:pytest]
-addopts = --flake8 --cov openvpn_status
-pep8ignore =
-    docs/conf.py ALL
+addopts = --cov openvpn_status
+
+[tox:tox]
+min_version = 4.0
+env_list = py36,py310,pypy,pypy3
+
+[testenv]
+changedir = tests
+deps =
+    pytest==7.2.0
+    pytest-cov==4.0.0
+    flake8==6.0.0
+commands =
+    flake8 ../openvpn_status ../setup.py .
+    py.test
+    coverage html
+
+[testenv:pypy]
+deps =
+    pytest==4.6.11
+    pytest-cov==2.12.1
+    flake8==3.9.2
+
+[testenv:py36]
+deps =
+    pytest==7.2.0
+    pytest-cov==4.0.0
+    flake8==5.0.4
+
+[testenv:pypy3]
+deps =
+    pytest==7.2.0
+    pytest-cov==4.0.0
+    flake8==5.0.4
