--- a/docs/requirements.in
+++ b/docs/requirements.in
@@ -1,3 +1,3 @@
 sphinx
-
-jinja2>=2.11.3  # CVE-2016-10745 CVE-2019-10906 CVE-2020-28493
+jinja2>=2.11.3,<3.0 # CVE-2016-10745 CVE-2019-10906 CVE-2020-28493
+markupsafe<2.1
